# ocaml-ctfp

./: .gitattributes  .gitignore  .ocamlformat  README.org  dune  ocaml-ctfp.install  ocaml-ctfp.opam
.github/: FUNDING.yml
chapter1/: chapter1.md  dune  dune.inc
chapter10/: README.md
chapter11/: README.md
chapter12/: README.md
chapter13/: README.md
chapter14/: README.md
chapter15/: README.md
chapter16/: README.md
chapter17/: README.md
chapter18/: README.md
chapter19/: README.md
chapter2/: README.md  Readme.md  prelude.ml
chapter20/: README.md  prelude.ml
chapter21/: README.md  prelude.ml
chapter22/: README.md
chapter23/: README.md
chapter24/: README.md
chapter25/: README.md
chapter26/: README.md  dune
chapter27/: README.md  dune.inc
chapter3/: README.md
chapter30/: README.md
chapter4/: README.md
chapter5/: README.md
chapter6/: README.md
chapter7/: README.md
chapter8/: README.md
chapter9/: README.md
playground/: .merlin  dune  playground.md
